# raijin-server

./: .env.example  ARCHITECTURE.md  AUDIT.md  AUDIT_STATUS.txt  CHANGELOG.md  EXAMPLES.md  GITHUB_SSH_SETUP.md  LICENSE  README.md  RELEASE.sh  SECURITY.md  SUMMARY.md  raijin-server.sln  release.sh  setup.cfg
docs/: BACKLOG_V2.md  HARBOR.md  INFRASTRUCTURE_GUIDE.md  INTERNAL_DNS.md  MINIO_OPERATIONS.md  PUBLIC_APPS.md  README.md  SSH_WINDOWS.md  STACK.md  VAULT.md  VELERO.md  VERSIONING.md  VISUAL_TOOLS.md  VPN_REMOTE_ACCESS.md  VPN_TEST.md
docs/ci-cd/: AGENT_GUIDE.md  CLOUDFLARE_QUICKSTART.md  COPILOT_PROMPT.md  DOMAIN_SETUP.md  EXAMPLE_ECOMMERCE.md  GITOPS_AUTOMATION.md  GITOPS_QUICKSTART.md  INDEX.md  QUICK_START_TEMPLATE.md  README.md  WORKFLOW.md
docs/tools/: CHANGELOG.md  README.md  argo.md  bootstrap.md  calico.md  cert-manager.md  grafana.md  harbor.md  helm.md  istio.md  kong.md  kubernetes.md  loki.md  metallb.md  minio.md  observability.md  prometheus.md  secrets.md  supabase-security.md  supabase.md  traefik.md  vault.md  velero.md
examples/cert-manager/: clusterissuer-dns01-azure.yaml  clusterissuer-dns01-cloudflare.yaml  clusterissuer-dns01-digitalocean.yaml  clusterissuer-dns01-route53.yaml  clusterissuer-http01-traefik.yaml
examples/ci-cd/: .semgrepignore  README.md  argo-workflow-ci.yaml  argocd-application.yaml  externalsecret-argo.yaml  github-actions-prd.yml  github-actions-tst.yml  harness-pipeline-prd.yaml  harness-pipeline-tst.yaml  semgrep-rules.yml
examples/monorepo-app/: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml
examples/monorepo-app/backends/api-python/: Dockerfile  Dockerfile.dev  pyproject.toml
examples/monorepo-app/backends/api-python/app/: main.py
examples/monorepo-app/backends/api-python/tests/: test_api.py
examples/monorepo-app/kubernetes/: argocd-apps.yaml
examples/monorepo-app/scripts/: security-check.sh  setup.sh  vault-setup.sh
examples/secrets/: clustersecretstore-vault-kubernetes.yaml  externalsecret-aws-sm.yaml  externalsecret-myapp.yaml  externalsecret-vault.yaml  secretstore-aws-sm.yaml  secretstore-vault-approle.yaml
examples/supabase/: README.md  REPOSITORY_STRUCTURE.md  namespace.yaml
examples/supabase/autoscaling/: hpa-kong.yaml  hpa-postgrest.yaml  pdb.yaml
examples/supabase/backup/: postgres-backup-cronjob.yaml  velero-schedule.yaml
examples/supabase/cicd/: README.md  argo-workflow.yaml  argocd-application.yaml  github-actions.yml
examples/supabase/database/: postgres-pvc.yaml  postgres-service.yaml  postgres-statefulset.yaml
scripts/: .gitkeep  README.md  checklist.sh  install.sh  port-forward-all.sh  pre-deploy-check.sh  pre-publish-check.sh  validate-internal-dns.sh
src/raijin_server/: __init__.py  cli.py  config.py  healthchecks.py  minio_utils.py  module_manager.py  utils.py  validators.py
tests/: test_full_install_sequence.py  test_registry.py
(+108 files in other folders)
