[metadata]
name = raijin-server
version = 0.1.0
description = CLI para automacao de setup e hardening de servidores Ubuntu Server.
long_description = file: README.md
long_description_content_type = text/markdown
author = Equipe Raijin
license = MIT
url = https://example.com/raijin-server
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Intended Audience :: System Administrators
    Environment :: Console

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    typer>=0.12
    rich>=13.7
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    raijin-server = raijin_server.cli:app
