[metadata]
name = raijin-server
version = 0.3.2
description = CLI para automacao de setup e hardening de servidores Ubuntu Server.
long_description = file: README.md
long_description_content_type = text/markdown
author = Equipe Raijin
license = MIT
url = https://example.com/raijin-server
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Intended Audience :: System Administrators
    Environment :: Console

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    typer>=0.12
    rich>=13.7
include_package_data = True

[options.package_data]
raijin_server.scripts =
    *.sh

[options.extras_require]
yaml =
    pyyaml>=6.0
dev =
    pytest>=7.0
    pytest-cov>=4.0
    black>=23.0
    ruff>=0.1
all =
    %(yaml)s
    %(dev)s

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    raijin-server = raijin_server.cli:app

[tool:pytest]
testpaths = tests
addopts = -q

[ruff]
line-length = 120
select = ["E", "F", "W", "I"]
ignore = []
target-version = "py39"

[ruff.per-file-ignores]
# Allow __init__ import convenience without unused warnings
__init__.py = ["F401"]
